--- a/example/sign/pubspec.yaml
+++ b/example/sign/pubspec.yaml
@@ -1,5 +1,5 @@
-name: sign
-description: A new Flutter project.
+name: walletconnect_flutter_dapp
+description: A dApp showing how to use WalletConnect v2 with Flutter
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -32,12 +32,12 @@ dependencies:
     sdk: flutter
   walletconnect_modal_flutter:
     path: ../..
+  walletconnect_flutter_v2: ^2.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get_it: ^7.6.0
-  walletconnect_flutter_v2: ^2.1.1
   logger: ^1.4.0
   fl_toast: ^3.1.0
   qr_flutter: ^4.1.0
@@ -45,6 +45,7 @@ dependencies:
   web3dart: ^2.6.1
   universal_io: ^2.2.2
   json_annotation: ^4.8.1
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +59,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.4.6
   json_serializable: ^6.7.0
+  flutter_launcher_icons: "^0.13.1"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -101,3 +103,21 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/flutter_dapp_logo.png"
+  # web:
+  #   generate: true
+  #   image_path: "path/to/image.png"
+  #   background_color: "#hexcode"
+  #   theme_color: "#hexcode"
+  # windows:
+  #   generate: true
+  #   image_path: "path/to/image.png"
+  #   icon_size: 48 # min:48, max:256, default: 48
+  # macos:
+  #   generate: true
+  #   image_path: "path/to/image.png"
