--- a/example/sign/windows/CMakeLists.txt
+++ b/example/sign/windows/CMakeLists.txt
@@ -1,10 +1,10 @@
 # Project-level configuration.
 cmake_minimum_required(VERSION 3.14)
-project(sign LANGUAGES CXX)
+project(walletconnect_flutter_dapp LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "sign")
+set(BINARY_NAME "walletconnect_flutter_dapp")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
