--- a/example/sign/windows/runner/Runner.rc
+++ b/example/sign/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "sign" "\0"
+            VALUE "FileDescription", "walletconnect_flutter_dapp" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "sign" "\0"
+            VALUE "InternalName", "walletconnect_flutter_dapp" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "sign.exe" "\0"
-            VALUE "ProductName", "sign" "\0"
+            VALUE "OriginalFilename", "walletconnect_flutter_dapp.exe" "\0"
+            VALUE "ProductName", "walletconnect_flutter_dapp" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
