--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   smooth_page_indicator: ^1.1.0
   event: ^2.1.2
+  flutter_keyboard_visibility: ^5.4.1
 
 dev_dependencies:
   flutter_test:
